--- a/Homepage.html
+++ b/Homepage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +11,7 @@
 <body>
   <header>
     <nav id="nav-bar">
-      <div>
+      <div class="container">
         <h1><a href="Homepage.html">HBT</a></h1>
         <ul>
           <li><a class="Home"href="Homepage.html">Home</a></li>
@@ -18,6 +20,46 @@
         </ul>
       </div>    
     </nav>
+    <div id="show-case" class="showcase">
+      <div class="container">
+        <div class="showcase-contents">
+          <h1 class="primary"><span class="special-style">Enjoy</span> Your Stay</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, eligendi laboriosam. Repellendus officia harum eaque.</p>
+          <a class="btn-0" href="About.html">About Our Hotel</a>
+        </div>
+      </div>
+    </div>
   </header>
+  <section id="history">
+    <div class="pic1"></div>
+    <div class="history-contents">
+      <h2><span class="special-style">The History</span> Of Our Hotel</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda aliquam dolor alias iste autem, quaerat magni unde accusantium qui fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis,explicabo quisquam dolor placeat praesentium nesciunt mollitia quos nobis natus voluptatum asperiores!</p>
+    <a class="light-btn" href="About.html">Read More</a>
+    </div>
+  </section>
+  <section id="boxes">
+    <div class="box">
+      <i class="fas fa-hotel fa-3x "></i>
+      <h3>Great Location</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+
+    </div>
+    <div class="box bg">
+      <i class="fas fa-utensils fa-3x"></i>
+      <h3>Free Meals</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+    </div>
+    <div class="box">
+      <i class="fas fa-dumbbell fa-3x"></i>
+      <h3>Fitness Room</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+    </div>
+  </section>
+  <div class="clr"></div>
+  <footer id="main-footer">
+    <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
+  </footer>
+
 </body>
 </html>
