--- a/home.html
+++ b/home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="style1.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
+  
   <title>hotel-website</title>
 </head>
 <body>
@@ -20,7 +22,7 @@
      </ul>
       </div>  
     </nav>
-    <div id="showcase">
+    <section id="showcase">
       <div class="container">
         <div class="showcase_contents">
           <h1 class="title-1"><span class="text-primary"> Enjoy</span>
@@ -29,7 +31,7 @@
           <a class="btn" href="about.html">About Our Hotel</a>
           </div>
       </div>
-    </div>
+    </section>
   </header>
   <section id="hotel-info" class="bg-dark">
     <div class="pic1"></div>
