--- a/about.html
+++ b/about.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
+
+  
   <title>hotel-website</title>
 </head>
 <body>
