--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
+ 
   <title>hotel-website</title>
 </head>
 <body>
@@ -19,7 +22,7 @@
       </div>  
     </nav>
   </header>
-  <section id="contact">
+  <section id="contact-info">
     <div class="container">
 
       <h1 class="lead"><span class="text-primary ">Contact</span> Us</h1>
@@ -45,7 +48,7 @@
     </form>
     <div class="clr"></div>
   </section>
-    <section class="bg-dark">
+    <section id="contact" class="bg-dark">
     <div class="container">
 
       <div class=" box">
