--- a/index.html
+++ b/index.html
@@ -3,80 +3,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>edgeledger</title>
+  <title>edgeledger_project</title>
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-      integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
-      crossorigin="anonymous"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
+    crossorigin="anonymous"
+  />
   <link rel="stylesheet" href="./css-files/style.css">
   <link rel="stylesheet" href="./css-files/utility.css">
 </head>
-<body id="home">
-  <header id="header-1"class="header-1">
-    <div id="nav-bar" class="bg-dark">
-     <h1><span class="text-primary"><i class="fas fa-book-open "></i>Edge</span>Ledger</h1>
-    <nav>
-      <ul>
-       <li><a href="#home">Home</a></li>
-       <li><a href="#about">About</a></li>
-       <li><a href="#cases">Cases</a></li>
-       <li><a href="#blog">Blog</a></li>
-       <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+<body id="#home">
+  <header id="background"class="background">
+    <div class="navbar">
+      <h1 class="logo"><span class="text-primary"><i class="fas fa-book-open"></i>Edge</span>Ledger</h1>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#cases">Cases</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
     </div>
-    <div class="homepage-details">
-      <h1>The Sky Is The Limit</h1>
-      <p>We provide world class financial assistance</p>
-     <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a> 
+      <div class="showcase-contents">
+        <h1>The Sky Is The Limit</h1>
+        <p>We provide world class financial assistance</p>
+        <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
+      
     </div>
   </header>
   <main>
-    <section id="#about">
-      <div  class="flex-items">
-        <div class="icons">
-          <i class="fas fa-university fa-2x"></i>
-          <div>
-          <h3> Invesment Banking</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, iusto!</p>
-        </div>
-      </div>
-        <div class="icons">
-          <i class="fas fa-book-reader fa-2x"></i>
-        <div><h3> Portfolio Manager</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, iusto!</p>
-          </div>
-      </div>
-        <div class="icons">
-          <i class="fas fa-pencil-alt fa-2x"></i>
+    <section id="about">
+      <div  class="flex-items btn-light">
         <div>
-          <h3>Tax & Custodial</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, iusto!</p>
+        <i class="fas fa-university fa-2x"></i>
+        <div>
+          <h2>Investment Banking</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, iusto!</p>
         </div>
       </div>
-    </div>
-     </section>
-  <section>
-    <div class="row">
-      <div class="column">
-        <div class="column-1">
-          <img src="images/home/people.jpg" alt="">
+      <div>
+        <i class="fas fa-book-reader fa-2x"></i>
+        <div>
+          <h2>Portfolio Manager</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, iusto!</p>
+        </div>   
+      </div>
+      <div>
+        <i class="fas fa-pencil-alt fa-2x"></i>
+        <div>
+          <h2>Tax & Custodial</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, iusto!</p>
+        </div>     
+      </div>
+      </div>
+    </section>
+    <section class="flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <div><img src="./images/home/people.jpg" alt=""></div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2">
+            <h4>What you are looking for</h4>
+            <h2>We provide bespoke solutions</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias illum, animi earum ea amet sequi reiciendis sit corporis sunt iusto cupiditate odio maxime adipisci cumque eligendi nemo dolore id itaque?</p>
+            <a href="#home" class="btn btn-transparent">Read More</a>
+          </div>
         </div>
       </div>
-    <div class="column">
-      <div class="column-2">
-        <h3>What you are looking for</h3>
-        <h2>We provide bespoke solutions</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias illum, animi earum ea amet sequi reiciendis sit corporis sunt iusto cupiditate odio maxime adipisci cumque eligendi nemo dolore id itaque?</p>
-        <a href="#home" class="btn-light">Read more</a>
-      </div>
-    </div>
-  </div>
-  </section>
-  </main>
+    </section> 
   
+  
+  
+
 </body>
 </html>
